--- a/main.html
+++ b/main.html
@@ -8,6 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1><marquee behavior="scroll" direction="right" >Welcome to Accio Jobs!</marquee>
+	</h1>
+	<h1 style="text-decoration:underline">
+		<a href="https://acciojob.com/blog/" >Blog</a>
+	</h1>
+	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=
+		entropy&cs=tinysrgb&fit=max&fm=jpg&i
+		xid=MnwxMTc3M3wwfDF8c2VhcmNofDI2
+		fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNj
+		cxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" 
+		alt="here was a nice image" height="200">
+	<h1>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs.Optimization</a>
+	</h1>
+	<p style="color:blue;text-decoration:underline">
+		We can say that optimization is one step further than the brute-force method of problem solving...
+	</p>
+	<img src="https://images.unsplash.com/photo-1504384308090-
+		c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ix
+		id=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJv
+		Z3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="here was a nice pic"
+		height="200">
+	<h1>
+		<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">
+			DSA vs. Competitive Programming</a>
+	</h1>
+	<p style="color:blue;text-decoration:underline">
+		 DSA or Competitive programming?Which is better for you?Questions such as these often put in you a...
+	</p>
+<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="here was a nice pic"
+		height="200">
+	<h1 style="color:purple;text-decoration:underline">
+		<a href="https://acciojob.com/blog/untitled-19/">
+			Complete Guide on FlexBox</a>
+	</h1>
+	<p style="color:purple;text-decoration:underline">
+		 As a job seeker,you may wonder how to make your Linkedin profile stand out to recruiters.Your Linkedin...
+	</p>	
     <script type="text/javascript" src="./script.js">
 </script>
 
