--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1><marquee behavior="scroll" direction="right" >Welcome to Accio Jobs!</marquee>
+	<h1><marquee >Welcome to Accio Jobs!</marquee>
 	</h1>
 	<h1 style="text-decoration:underline">
 		<a href="https://acciojob.com/blog/" >Blog</a>
